# unix-network-relevant-study

./: README.md
apue/: getuser  getuser.c  group  grp.c  pw  pw.c  shadow  spw.c
ipc/chap16/: square.h  square.x  square_clnt.c  square_svc.c
ipc/chap3/: 1.txt  2.txt  slot  slot.c
ipc/chap4/: hello.r  mainfifo.c  mainpipe.c  mainpopen.c  open  open.c  pipe  popen
ipc/chap5/: mqcreate  mqcreate.c  mqgetattr  mqgetattr.c  mqrecv  mqrecv.c  mqsend  mqsend.c  mqunlink  mqunlink.c
ipc/chap6/: comm.h  ctl  ctl.c
ipc/chap7/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  mutex  mutex.c
ipc/chap7-1/: procon.c  procon2  procon2.c  procon3  procon3-1  procon3-1.c  procon3.c
ipc/chap7/.deps/: mutex.Po
ipc/chap7/autom4te.cache/: output.0  requests  traces.0  traces.1
ipc/chap9/: a.out  fcntl  lockfcntl.c  lockmain.c  locknone.c  seqno
unp/chap11/: exe_hostent.c  exe_resolve  hostent.c  resolve
unp/chap8/: cli  ser  udpcli.c  udpser.c
unp/unpv13e/inetd/: daytimetcpsrv2  daytimetcpsrv3
unp/unpv13e/intro/: byteorder  daytimetcpcli  daytimetcpcli1  daytimetcpcli2  daytimetcpcli3  daytimetcpcliv6  daytimetcpsrv  daytimetcpsrv1  daytimetcpsrv2  daytimetcpsrv3  daytimetcpsrvv6
unp/unpv13e/names/: daytimetcpcli  daytimetcpcli1  daytimetcpcli2  daytimetcpcli3  daytimetcpsrv1  daytimetcpsrv2  daytimetcpsrv3  daytimetcpsrv4  daytimeudpcli1  daytimeudpcli2  daytimeudpsrv2  daytimeudpsrv3  hostent  hostent2
unp/unpv13e/tcpcliserv/: tcpcli01  tcpcli04  tcpcli05  tcpcli06  tcpcli07  tcpcli08  tcpcli09  tcpcli10  tcpserv01  tcpserv02  (+5 more)
(+12 files in other folders)
